# avito_parser_service

./: README.md  main.py  pyproject.toml
data/: .~lock.avito_details.csv#  avito_details.csv  avito_details.xlsm  avito_links.csv  avito_links.xlsm
data/browser_profile/: Local State
data/browser_profile/Default/: Cookies  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Web Data
data/browser_profile/Default/DawnGraphiteCache/: data_1  index
data/browser_profile/Default/DawnWebGPUCache/: data_1  index
data/browser_profile/Default/Extension Rules/: LOG
data/browser_profile/Default/Extension Scripts/: LOG
data/browser_profile/Default/Extension State/: LOG  LOG.old
data/browser_profile/Default/GCM Store/: LOG  LOG.old
data/browser_profile/Default/GPUCache/: data_0  data_1  data_2  index
data/browser_profile/Default/Session Storage/: LOG  LOG.old
data/browser_profile/Default/Sessions/: Session_13422483644840411  Session_13422483695335170  Tabs_13422483691180934  Tabs_13422483695462488
data/browser_profile/Default/Site Characteristics Database/: LOG  LOG.old
data/browser_profile/GrShaderCache/: data_0  data_1  f_000003  f_000004  f_000005  f_000006  f_000007  f_000009  index
data/browser_profile/GraphiteDawnCache/: data_1  index
data/browser_profile/ShaderCache/: data_0  data_1  data_2  index
data/browser_profile/segmentation_platform/: ukm_db
test_service/: avito_csv_playwright_parser.py  test2_parser.py  test_parser.py
(+554 files in other folders)
