[project]
name = "parser-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "playwright>=1.59.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.3",
    "sqlalchemy>=2.0.49",
    "undetected-chromedriver>=3.5.5",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
